// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage debe de mostrar el componente con la imagen personalizada 1`] = `
<img
  alt="Product"
  className="productImg "
  src="https://via.placeholder.com/150"
/>
`;

exports[`ProductImage debe de mostrar la imagendel producto 1`] = `
<div
  className="productCard "
>
  <img
    alt="Product"
    className="productImg "
    src="./coffee-mug.png"
  />
</div>
`;
